--- a/trik-rahasia-scatter-hitam.html
+++ b/trik-rahasia-scatter-hitam.html
@@ -41,7 +41,7 @@
     <meta property="og:type" content="website" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="VIRAL! Pria Bandung Bongkar Trick Rahasia Scatter Hitam, Raup Untung Rp78 Juta! />
+    <meta name="twitter:title" content="VIRAL Pria Bandung Bongkar Trick Rahasia Scatter Hitam, Raup Untung Rp78 Juta!" />
     <meta name="twitter:description" content="Si Jago Bandung membongkar rahasia Scatter Hitam! Temukan strategi dan trick yang digunakannya untuk meraih keuntungan fantastis." />
     <meta name="twitter:url" content="$url" />
     <meta name="twitter:image" content="https://tuncheon.github.io/images/pria-bandung.jpg" />
@@ -70,7 +70,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Tuncheon News",
-        "alternateName": "VIRAL! Pria Bandung Bongkar "Trick Rahasia" Scatter Hitam, Raup Untung Rp78 Juta!",
+        "alternateName": "VIRAL! Pria Bandung Bongkar Trick Rahasia Scatter Hitam, Raup Untung Rp78 Juta!",
         "url": "https://tuncheon.github.io/news/trik-rahasia-scatter-hitam.html",
         "logo": "https://tuncheon.github.io/images/icon.jpg"
       }
@@ -100,7 +100,6 @@
           "@type": "WebPage",
           "@id": "https://tuncheon.github.io/news/trik-rahasia-scatter-hitam.html"
         },
-        "headline": "VIRAL! Pria Bandung Bongkar "Trick Rahasia" Scatter Hitam, Raup Untung Rp78 Juta!",
         "description": "Si Jago Bandung membongkar rahasia Scatter Hitam! Temukan strategi dan trick yang digunakannya untuk meraih keuntungan fantastis.",
     "image": ["https://tuncheon.github.io/images/pria-bandung.jpg"],
         "author": {
