--- a/Hacker-Indonesia-Temukan-Formula-Jitu-untuk-Jackpot.html
+++ b/Hacker-Indonesia-Temukan-Formula-Jitu-untuk-Jackpot.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html ⚡ lang="id" itemscope="itemscope" itemtype="https://schema.org/WebPage">
   <head>
@@ -214,7 +215,7 @@
                 <b>Eksploitasi Celah Algoritma:</b> Meskipun RNG dirancang untuk menghasilkan hasil yang acak, beberapa ahli keamanan siber meyakini bahwa algoritma tersebut tidak sepenuhnya sempurna.
             </li>
             <li>
-                <b-Manipulasi Sistem:</b> Beberapa laporan menyebutkan adanya manipulasi sistem yang dilakukan oleh sang hacker.
+                < Sistem:</b> Beberapa laporan menyebutkan adanya manipulasi sistem yang dilakukan oleh sang hacker.
             </li>
         </ul>
         <h2>Dampak dan Kontroversi</h2>
